<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.sinoservices</groupId>
  <artifactId>doppler-web</artifactId>
  <version>1.0</version>
  <packaging>war</packaging>
  <name>DOPPLER WEB</name>
  <description/>
  <properties>
     <!-- 各依赖版本 -->
     	<doppler_facade.version>1.0</doppler_facade.version>
	  	<dubbo.version>2.8.1</dubbo.version>
		<springside.version>4.1.1-SNAPSHOT</springside.version>
		<spring.version>4.0.2.RELEASE</spring.version>
		<mybatis.version>3.1.0</mybatis.version>
		<spring-data-jpa.version>1.4.1.RELEASE</spring-data-jpa.version>
		<tomcat-jdbc.version>7.0.42</tomcat-jdbc.version>
		<sitemesh.version>2.4.2</sitemesh.version>
		<shiro.version>1.2.2</shiro.version>
		<cxf.version>2.7.7</cxf.version>
		<activemq.version>5.7.0</activemq.version>
		<quartz.version>2.2.1</quartz.version>
		<jedis.version>2.2.1</jedis.version>
		<ehcache.version>2.6.6</ehcache.version>
		<spymemcached.version>2.10.1</spymemcached.version>
		<hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
		<jolokia.version>1.1.4</jolokia.version>
		<hystrix.version>1.3.7</hystrix.version>
		<jackson.version>2.2.3</jackson.version>
		<slf4j.version>1.7.5</slf4j.version>
		<logback.version>1.0.13</logback.version>
		<commons-lang3.version>3.1</commons-lang3.version>
		<commons-io.version>2.4</commons-io.version>
		<guava.version>15.0</guava.version>
		<joda-time.version>2.3</joda-time.version>
		<dozer.version>5.4.0</dozer.version>
		<httpclient.version>4.3.1</httpclient.version>
		<freemarker.version>2.3.20</freemarker.version>
		<javasimon.version>3.4.0</javasimon.version>
		<aspectj.version>1.7.3</aspectj.version>
		<junit.version>4.11</junit.version>
		<mockito.version>1.9.5</mockito.version>
		<powermock.version>1.5.1</powermock.version>
		<selenium.version>2.37.1</selenium.version>
		<jetty.version>7.6.13.v20130916</jetty.version>
		<h2.version>1.3.174</h2.version>
		<zkclient.version>0.4</zkclient.version>
	  <sinoservices_common>1.0</sinoservices_common>
		<!-- plugin的属性 -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.7</jdk.version>
  </properties>
  <dependencies>
      <!-- 业务依赖 -->
	  <dependency>
		  <groupId>com.sinoservices</groupId>
		  <artifactId>sinoservices-common</artifactId>
		  <version>${sinoservices_common}</version>
	  </dependency>
      <dependency>
           <groupId>com.sinoservices</groupId>
           <artifactId>doppler-facade</artifactId>
           <version>${doppler_facade.version}</version>
      </dependency>
	  <!--dubbo,日志统计依赖-->
	  <dependency>
		  <groupId>com.101tec</groupId>
		  <artifactId>zkclient</artifactId>
		  <version>${zkclient.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>com.alibaba</groupId>
		  <artifactId>dubbo</artifactId>
		  <version>${dubbo.version}</version>
	  </dependency>
    <!-- Spring 基础包 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- spring-security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>3.1.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>3.1.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>3.1.1.RELEASE</version>
		</dependency>
		<!-- spring web -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- jackson -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>
		<!-- mybatis -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>${mybatis.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>1.1.0</version>
		</dependency>
		<!-- commons -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.0.4</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.7.0</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>commons-pool</groupId>
			<artifactId>commons-pool</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
		</dependency>
		<!-- jstl -->
		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>taglibs</groupId>
			<artifactId>standard</artifactId>
			<version>1.1.2</version>
		</dependency>
		<!-- servlet -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>

		<!-- 解决xerces包冲突 -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xerces</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.9.1</version>
		</dependency>

		<!-- sinoservices start -->
		<dependency>
			<groupId>com.sinoservices</groupId>
			<artifactId>components</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.sinoservices</groupId>
			<artifactId>components-number</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.sinoservices</groupId>
			<artifactId>tangram-core</artifactId>
			<version>5.0.19</version>
		</dependency>
		<dependency>
			<groupId>com.sinoservices</groupId>
			<artifactId>tangram-mybatis</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.sinoservices</groupId>
			<artifactId>x-components</artifactId>
			<version>1.0.0</version>
		</dependency>
		<!-- sinoservices end -->
		<!-- freemarker -->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.19</version>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.6.0</version>
		</dependency>

		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.1.24</version>
		</dependency>

		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib-nodep</artifactId>
			<version>2.2.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>fluent-hc</artifactId>
			<version>4.3.6</version>
		</dependency>
		<dependency>
			<groupId>com.caucho</groupId>
			<artifactId>hessian</artifactId>
			<version>4.0.7</version>
		</dependency>

		<!-- http -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.3.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient-cache</artifactId>
			<version>4.3.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.3.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>4.3.6</version>
		</dependency>

		<!-- logback -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>1.8.5</version>
		</dependency>
  </dependencies>
   <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
	  <plugin>
          <groupId>org.apache.tomcat.maven</groupId>
          <artifactId>tomcat6-maven-plugin</artifactId>
          <version>2.2</version>
          <configuration>
                    <port>8080</port>
                    <path>/doppler-web</path>
                    <uriEncoding>UTF-8</uriEncoding>
                    <server>tomcat6</server>
           </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.tomcat.maven</groupId>
          <artifactId>tomcat7-maven-plugin</artifactId>
          <version>2.2</version>
          <configuration>
                    <port>8080</port>
                    <path>/doppler-web</path>
                    <uriEncoding>UTF-8</uriEncoding>
                    <finalName>doppler-web</finalName>
                    <server>tomcat7</server>
           </configuration>
      </plugin>
      <plugin>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-maven-plugin</artifactId>
			<version>8.1.16.v20140903</version>
			<configuration>
				<jvmArgs>-XX:+CMSClassUnloadingEnabled -XX:PermSize=256M
					-XX:MaxPermSize=512M</jvmArgs>
				<connectors>
					<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
						<port>9000</port>
					</connector>
				</connectors>
				<stopPort>9090</stopPort>
				<stopKey>a</stopKey>
				<scanIntervalSeconds>30</scanIntervalSeconds>
				<webApp>
					<contextPath>/</contextPath>
				</webApp>
				<jettyXml>src/main/webapp/WEB-INF/jetty8.xml</jettyXml>
				<!--<contextPath>/</contextPath> -->
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>tomcat-maven-plugin</artifactId>
			<version>1.1</version>
		</plugin>
    </plugins>
  </build>
</project>